--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^8.8.0",
     "jwt-decode": "^3.1.2",
